# kimchi

./: AGENTS.md  README.md  before-improve.jsonl  package.json  pnpm-lock.yaml  run-improve.jsonl  what-tools.jsonl
.github/workflows/: canary.yml  release.yml
benchmark/audit-session/: audit-session.sh
benchmark/manual/: README.md  analyze-session.py  check-session.py  new-session.sh  tasks.md
benchmark/terminal-bench-2/: README.md  pyproject.toml
benchmark/terminal-bench-2/scripts/: run-local.sh  run-release.sh
benchmark/terminal-bench-2/src/kimchi_agent/: agent.py  agent_test.py  claude_code_kimchi_test.py
patches/: @earendil-works__pi-coding-agent.patch  @earendil-works__pi-coding-agent@0.79.10.patch
src/: cli.ts  config.test.ts  config.ts  models.ts  ollama.test.ts  ollama.ts  paste-interceptor.ts
src/agent-discovery/: index.ts
src/components/: editor.ts  footer.ts
src/extensions/: bash-timeout-patch.test.ts  bash-tool-guard.integration.test.ts  bash-tool-guard.test.ts  bash-tool-guard.ts  exploration-guard.ts  help.ts  hide-thinking.test.ts  hide-thinking.ts  model-switch.test.ts  model-switch.ts  prompt-summary.ts  provider-settings.test.ts  provider-settings.ts  questionnaire-form.ts  slash-commands.ts  subagent.ts  tool-rendering.test.ts  tool-rendering.ts  ui.ts
src/ferment/: fsm.test.ts  fsm.ts  state-machine.test.ts  state-machine.ts  stats.ts  store.test.ts  types.ts
src/integrations/: 9router.test.ts  9router.ts  claude.test.ts  claude.ts  openai.test.ts  openai.ts  openclaw.test.ts
src/resources/: definitions.ts
(+146 files in other folders)
